gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-trait-alias.rs
trait Foo = Default;
// { dg-error ".E0658." "" { target *-*-* } .-1 }

fn main() {}

